fixed bug due to overlapping divs, and updated styles to make content more readable.

--- a/s3-content/css/style.css
+++ b/s3-content/css/style.css
@@ -20,6 +20,7 @@ body  {
     -webkit-font-smoothing: antialiased;
     box-shadow: 0 0 10px rgba(0,0,0, 0.3);
     overflow: hidden;
+    z-index: 0;
 }
 
 a {
@@ -76,6 +77,11 @@ div:empty {
 .links a:hover {
     color: #4D99BF;
 }
+
+.search-result-item {
+    z-index: 10;
+}
+
 .search-result-item:hover {
     color: #4D99BF;
     cursor: pointer;
@@ -131,6 +137,7 @@ input {
 
 .search-container {
     width: 100%;
+    z-index: 10;
 }
 
 .search-input {
@@ -140,9 +147,11 @@ input {
 }
 
 .search-results {
-    background-color: #232323;
+    background-color: #222222;
     font-size: 0.8rem;
     width: 100%;
+    max-height: 80px;
+    overflow-y: scroll;
     box-shadow: 0 0 10px rgba(0,0,0, 0.05);
 }
 
@@ -159,11 +168,14 @@ input {
     height: 100%;
     flex: 0 0 calc(100%);
     color: #BABABA;
+    z-index: 0;
 }
 
 .company-details {
     padding: .50rem;
+    padding-top: 5rem;
     height: 100%;
+    background: #282828b3;
 }
 
 .account {
@@ -171,9 +183,13 @@ input {
     margin-right: 0.5em;
 }
 
-
-
 .company-description {
     height: 20%;
     width: 40%;
+}
+
+.company-intro {
+    padding: 0.5rem;
+    height: 100%;
+    background-color: #222;
 }
